# MGPlib

./: CMakeLists.txt  INSTALL  README.md  The GPJSON Format Specification.docx  The GPJSON Format Specification.txt  readme.txt
doc/: CMakeLists.txt  程序使用说明.docx
include/: GenerateHeaders.sh  gplib.h
include/gplib/: AMRLSCanceller  AbsVelRecObjective  AdaptiveFilter  Adaptors  Aniso1DMTObjective  AnisoGAJointConf  AnisoJointConf  AnisoSurfaceWaveModel  AnisoSurfaceWaveObjective  AnisoSurfaceWaveSynthetic  AnnealingGA  ApplyFilter  ArraySampleGenerator  BinaryPopulation  BinaryTournamentSelect  BinaryTranscribe  BipolarActivationFunction  BirrpAsciiFormat  Bootstrap  C1DAnisoMTSynthData  C1DMTObjective  C1DMTSynthData  C1DRecObjective  CCalcRecConf  CRFSpecElement  CalcRecConf  CollapseModel  CombinedRoughness  ComplexICA  Cov  CsvFormat  FastICA  FatalException  FileAbort  FilterFunc  FkModel  GA  GAConf  GeneralActivationFunction  GeneralGA  (+100 more)
include/sdk/: OptionFile.cpp  OptionFile.h
include/sdk/Aniso_Joint_Inversion/: AnisoGAJointConf.g  AnisoGAJointConf.h  AnisoGAJointConfLexer.hpp  AnisoGAJointConfParser.hpp  AnisoJointConf.h  SConscript
include/sdk/Exceptions/: FatalException.h
include/sdk/GAClasses/: AnnealingGA.h  BinaryPopulation.h  BinaryTournamentSelect.h  BinaryTranscribe.h  GA.h  GAConf.h  GeneralGA.h  GeneralObjective.h  GeneralPopulation.h  GeneralPropagation.h  GeneralRNG.h  GeneralSelect.h  GeneralTranscribe.h  GrayTranscribe.h  ParetoGA.h  PlottableObjective.h  SimpleSelect.h  StandardPropagation.h  TestObjective.h  TestObjective2.h  UniformRNG.h  UniquePop.h  gentypes.h
include/sdk/Global/: Adaptors.h  FileAbort.h  MatNorm.h  NetCDFTools.h  NumUtil.h  Util.h  VecMat.h  VectorOptions.h  convert.h  miscfunc.h  stringcompare.h  types.h
include/sdk/Joint_Inversion/: AbsVelRecObjective.h  Aniso1DMTObjective.h  C1DMTObjective.h  C1DRecObjective.h  CombinedRoughness.h  Iso1DMTObjective.h  IsoJointConf.h  MTAnisoRoughness.h  MTFitSetup.h  MTInvConf.h  MTRecObjective.h  MTRoughness.h  Member2Aniso.h  Multi1DRecObjective.h  PTensor1DMTObjective.h  SeismicModelDiff.h  SurfInvConf.h
include/sdk/MT_Tools/1DMT/: C1DAnisoMTSynthData.h  C1DMTSynthData.h  CollapseModel.h  SConscript
include/sdk/MT_Tools/3D_Model_Tools/: SConscript  ThreeDMTModel.h
include/sdk/MT_Tools/EDI_Parser/: EDILexer.hpp  EDIParser.hpp  EDIParserTokenTypes.hpp  SConscript
include/sdk/MT_Tools/J_Parser/: JLexer.hpp  JParser.g  JParser.hpp  JParserSpirit.h  JParserTokenTypes.hpp
include/sdk/MT_Tools/MT_Tensor_Tools/: MTFuncs.h  MTStation.h  MTStationList.h  MTTensor.h  MagneticTF.h  PTensorMTData.h  PTensorMTStation.h  ReadWriteImpedances.h  SConscript  ptfuncs.h
include/sdk/MT_Tools/Simple_Processing/: SConscript
include/sdk/MT_Tools/Station_Parser/: StationParser.h
include/sdk/MT_Tools/Time_Series_Tools/: BirrpAsciiFormat.h  CsvFormat.h  LemiTsFormat.h  MtuFilter.h  MtuFormat.h  SConscript  TimeSeries.h  TimeSeriesData.h  tsfuncs.h
include/sdk/MT_Tools/ptensor/: SConscript
include/sdk/Neural_Network/: BipolarActivationFunction.h  GeneralActivationFunction.h  GeneralLinearCombiner.h  GeneralNeuron.h  IdentityActivationFunction.h  InputNeuron.h  NeuralNetwork.h  SConscript  SigmoidalNeuron.h
include/sdk/Seismic_Tools/: AnisoSurfaceWaveModel.h  AnisoSurfaceWaveObjective.h  AnisoSurfaceWaveSynthetic.h  CCalcRecConf.h  CRFSpecElement.h  CalcRecConf.h  FkModel.h  MoveoutCorrection.h  MultiAnisoSurfaceWaveObjective.h  MultiRecCalc.h  ParkSurfaceWaveData.h  RFVelCalc.h  RecCalc.h  RecInvConf.h  ResPkModel.h  SConscript  SWAnisoRoughness.h  Sdisp96Model.h  SeisTools.h  SeismicDataComp.h  SeismicModel.h  SeismicStationList.h  SurfInvGaConf.h  SurfaceWaveData.h  SurfaceWaveModel.h  SurfaceWaveObjective.h  SurfaceWaveSynthetic.h
include/sdk/Signal_Processing/: AMRLSCanceller.h  AdaptiveFilter.h  ApplyFilter.h  ComplexICA.h  FastICA.h  IterDecon.h  KHL.h  LMSCanceller.h  LSSOFilter.h  RLSCanceller.h  SConscript  WienerFilter.h  WienerInterpolator.h
include/sdk/Statistics/: ArraySampleGenerator.h  Bootstrap.h  Cov.h  Jacknife.h  MTSampleGenerator.h  PCA.h  SConscript  StatErrEst.h  statutils.h
include/sdk/Time_Series_Tools/: FilterFunc.h  ShortCorr.h  StackedSpectrum.h  TimeFrequency.h  TimeSeriesComponent.h  TsSpectrum.h  WFunc.h
src/: CMakeLists.txt
src/MT_Tools/: CMakeLists.txt  MT_Tools.pri  MT_Tools.pro  mtuBandPass.pro
src/MT_Tools/1DMT/todo/: angleavg.cpp  anisomt.cpp  cag++.cpp  makeinput.cpp  modelcorr.cpp  modeldensity.cpp  mtanisoga.cpp  randaniso.cpp  sumobjective.cpp
src/MT_Tools/3D_Model_Tools/: ThreeDMTModel.cpp  ThreeDMTModel.h  plotlayer.cpp  writevtk.cpp
src/MT_Tools/EDI_Parser/: EDILexer.cpp  EDILexer.hpp  EDIParser.cpp  EDIParser.hpp  EdiParser2.g
src/MT_Tools/J_Parser/: JLexer.cpp  JLexer.hpp  JParser.cpp  JParser.hpp  JParserSpirit.cpp  JParserSpirit.h  SConscript
src/MT_Tools/MT_Tensor_Tools/: addnoise.cpp  freqinter.cpp  goe2j.cpp  keepcommon.cpp  plotmtt.cpp  printmu.cpp  printrhostar.cpp  ptavg.cpp  shiftmt.cpp  swapphase.cpp  zavg.cpp
src/MT_Tools/Simple_Processing/: lmsprocessing.cpp  simple_processing.cpp
src/MT_Tools/Time_Series_Noise_Removal/: DelayFilter.cpp  Mtucorr.cpp  Mtumedian.cpp  mtuadaptive.cpp  mtunn.cpp
src/MT_Tools/Time_Series_Noise_Removal/option/: Mtucorr.json  Mtumedian.json
src/MT_Tools/Time_Series_Tools/: Exchangecomp.cpp  Magmean.cpp  Mtu2birrp.cpp  Mtubandpass.cpp  Mtucross.cpp  Mtucut.cpp  Mtufdiff.cpp  Mtumerge.cpp  Mtuparms.cpp  Mtupspec.cpp  Mtura.cpp  Rotts.cpp  Syncts.cpp  generatemtts.cpp  mtugood.cpp  mtupca.cpp  mtutimefrequency.cpp
src/MT_Tools/Time_Series_Tools/OptionFiles/: Exchangecomp.json  Mtu2birrp.json  Mtubandpass.json  Mtucross.json  Mtufdiff.json  Mtumerge.json  Mtupspec.json  Syncts.json  mtucut.json
src/MT_Tools/ptensor/: mtt2ptensor.cpp  phasetensormap.cpp  ptfreq.cpp  ptselect.cpp
test/: unittest.cpp  unittest.h
